dc-scv-ingress.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: portfolio
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: portfolio-service
  namespace: api
spec:
  type: NodePort
  ports:
    - name: portfolio-port
      port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 31000
  selector:
    app: portfolio

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: portfolio-ingress
  namespace: api
spec:
  rules:
    - host: www.austinbspencer.com
      http:
        paths:
          - path: /
            backend:
              serviceName: portfolio-service
              servicePort: portfolio-port
    - host: austinbspencer.com
      http:
        paths:
          - path: /
            backend:
              serviceName: portfolio-service
              servicePort: portfolio-port
