dc-svc-ingress.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: austin-portfolio
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: austin-portfolio
  template:
    metadata:
      labels:
        app: austin-portfolio
    spec:
      imagePullSecrets:
        - name: pipeline-docker-registry
      containers:
        - name: austin-portfolio
          image: ${CICD_IMAGE}:v1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: portfolio-service
  namespace: api
spec:
  type: NodePort
  ports:
    - name: portfolio-port
      port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 31000
  selector:
    app: austin-portfolio

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: portfolio-ingress
  namespace: api
spec:
  rules:
    - host: www.austinbspencer.com
      http:
        paths:
          - path: /
            backend:
              serviceName: portfolio-service
              servicePort: portfolio-port
    - host: austinbspencer.com
      http:
        paths:
          - path: /
            backend:
              serviceName: portfolio-service
              servicePort: portfolio-port
